# 2025-05-29-resnet18-double-descent

./: .gitignore  README.md  main.py  pyproject.toml  resnet18.py
