[project]
name = "2025-05-29-resnet18-double-descent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jaxtyping>=0.3.2",
    "numpy>=2.2.6",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]
